# Raft

./: CMakeLists.txt  README.md  main.cpp
state/: AbstractState.cpp  AbstractState.h  CandidataState.cpp  CandidataState.h  FollowerState.cpp  FollowerState.h  LeaderState.cpp  LeaderState.h  RaftServer.cpp  RaftServer.h  ServerContext.cpp  ServerContext.h
storage/: LogStore.cpp  LogStore.h  Request.cpp  Request.h
test/: BoostFormatTest.cpp  ClientServerTest.cpp  CommandClientTest.cpp  FollowerStateTest.cpp  RaftTest.cpp  RequestTest.cpp  TimerTest.cpp
util/: Client.cpp  Client.h  Log.cpp  Log.h  Server.cpp  Server.h  Session.cpp  Session.h  timer.h  util.h
